allow config through configmap

--- a/deploy/kubernetes/configmap.yaml
+++ b/deploy/kubernetes/configmap.yaml
@@ -5,7 +5,7 @@ metadata:
 data:
   repos: "google/pullsheet"
   users: "tstromberg marlongamez"
-  from: "2021-03-01"
+  since: "2021-03-01"
   until: "2021-03-24"
   title: "pullsheet stats"
 
