--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -9,7 +9,7 @@ jobs:
     name: Build
     strategy:
       matrix:
-        go-version: ['1.15.x', '1.16.x']
+        go-version: ['1.16.x']
         platform: [ubuntu-latest]
     runs-on: ${{ matrix.platform }}
     steps:
